Add GPT4 weather summary

--- a/assistant/weather/templates/weather/post/weather_list.html
+++ b/assistant/weather/templates/weather/post/weather_list.html
@@ -1,4 +1,4 @@
-{% extends "weather/base.html" %}
+{% extends "_base.html" %}
 {% block title %}Weather{% endblock %}
 {% block content %}
     <h1>Weather</h1>
