--- a/assistant/weather/templates/weather/post/weather_detail.html
+++ b/assistant/weather/templates/weather/post/weather_detail.html
@@ -1,4 +1,4 @@
-{% extends "weather/base.html" %}
+{% extends "_base.html" %}
 {%block title%}{{journal.title}}{%endblock%}
 {% block content %}
 <h1>{{ weather_entry.name }}</h1>
